Stub hero carousel

--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
   <body>
     <header>
       <nav>
-        <h1>My Own Beauty Aesthetics</h1>
+        <h1 class="sr-only">My Own Beauty Aesthetics</h1>
+        <ul>
+          <li class="all-caps">
+            <a href="tel:+16787885530">Call: (678) 788-5530</a>
+          </li>
+          <li class="all-caps">By appointment only</li>
+        </ul>
+        <section class="hero">
+          <div class="hero-left">
+            <h2 class="sr-only">My Own Beauty Aesthetics</h2>
+            <!-- <img src="" alt=""> MOBA logo goes here. -->
+            <!-- <img src="" alt=""> BBB logo goes here. -->
+          </div>
+          <div>
+            <p>
+              <span>Permanent Makeup Black Friday Deal</span>
+              <span>Up to</span>
+              <span>50% off</span>
+            </p>
+            <a href="http://"
+              >Book my <span class="all-caps">free</span> consultation</a
+            >
+          </div>
+        </section>
       </nav>
     </header>
     <main></main>
