Add eyeliner info

--- a/index.html
+++ b/index.html
@@ -22,19 +22,44 @@
           <!-- <img src="" alt=""> MOBA logo goes here. -->
           <!-- <img src="" alt=""> BBB logo goes here. -->
         </div>
-        <div>
-          <p>
+        <div class="hero-right">
+          <h2>
             <span>Permanent Makeup Black Friday Deal</span>
+          </h2>
+          <p>
             <span>Up to</span>
             <span>50% off</span>
           </p>
-          <a href="http://"
+          <a href="#" class="white-button"
             >Book my <span class="all-caps">free</span> consultation</a
           >
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <h2>
+          <span>Up to</span>
+          <span>50% off</span>
+        </h2>
+        <p>
+          <span>Permanent Makeup</span>
+          <span>Black Friday Deal</span>
+        </p>
+      </section>
+      <section>
+        <h3>Eyeliner</h3>
+        <p>
+          Semi permanent eyeliner, choice of winged, eye shadow effect or simple
+          liner. Top or bottom liner. Helps enhance natural eye shape. Touch up
+          included in price.
+          <span class="pink-and-bold">
+            Color will be advised by professional during consultation.
+          </span>
+        </p>
+        <a href="#" class="pink-button">Book my <span class="all-caps">free</span> consultation</a>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
