Add lip blush and microshader info

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <span>Black Friday Deal</span>
         </p>
       </section>
+
       <section>
         <h3>Eyeliner</h3>
         <p>
@@ -57,7 +58,39 @@
             Color will be advised by professional during consultation.
           </span>
         </p>
-        <a href="#" class="pink-button">Book my <span class="all-caps">free</span> consultation</a>
+        <a href="#" class="pink-button"
+          >Book my <span class="all-caps">free</span> consultation</a
+        >
+      </section>
+
+      <section>
+        <h3>Lip Blush</h3>
+        <p>
+          Customized permanent lip color. Can be full lips, ombre or liner.
+          Lasts 4 years plus with minimal fading. One month touch up included in
+          price.
+          <span class="pink-and-bold">
+            Color will be advised by professional during consultation.
+          </span>
+        </p>
+        <a href="#" class="pink-button"
+          >Book my <span class="all-caps">free</span> consultation</a
+        >
+      </section>
+
+      <section>
+        <h3>Microshaded Eyebrows</h3>
+        <p>
+          Customized to fit your natural facial features. This look is permanent
+          and looks similar to makeup. Lasts 4 years plus with minimal fading.
+          One month touch up included in price.
+          <span class="pink-and-bold">
+            Color will be advised by professional during consultation.
+          </span>
+        </p>
+        <a href="#" class="pink-button"
+          >Book my <span class="all-caps">free</span> consultation</a
+        >
       </section>
     </main>
     <footer></footer>
