Add classes for cards and their container

--- a/index.html
+++ b/index.html
@@ -47,51 +47,52 @@
           <span>Black Friday Deal</span>
         </p>
       </section>
+      <div class="cards">
+        <section class="card">
+          <h3>Eyeliner</h3>
+          <p>
+            Semi permanent eyeliner, choice of winged, eye shadow effect or
+            simple liner. Top or bottom liner. Helps enhance natural eye shape.
+            Touch up included in price.
+            <span class="pink-and-bold">
+              Color will be advised by professional during consultation.
+            </span>
+          </p>
+          <a href="#" class="pink-button"
+            >Book my <span class="all-caps">free</span> consultation</a
+          >
+        </section>
 
-      <section>
-        <h3>Eyeliner</h3>
-        <p>
-          Semi permanent eyeliner, choice of winged, eye shadow effect or simple
-          liner. Top or bottom liner. Helps enhance natural eye shape. Touch up
-          included in price.
-          <span class="pink-and-bold">
-            Color will be advised by professional during consultation.
-          </span>
-        </p>
-        <a href="#" class="pink-button"
-          >Book my <span class="all-caps">free</span> consultation</a
-        >
-      </section>
+        <section class="card">
+          <h3>Lip Blush</h3>
+          <p>
+            Customized permanent lip color. Can be full lips, ombre or liner.
+            Lasts 4 years plus with minimal fading. One month touch up included
+            in price.
+            <span class="pink-and-bold">
+              Color will be advised by professional during consultation.
+            </span>
+          </p>
+          <a href="#" class="pink-button"
+            >Book my <span class="all-caps">free</span> consultation</a
+          >
+        </section>
 
-      <section>
-        <h3>Lip Blush</h3>
-        <p>
-          Customized permanent lip color. Can be full lips, ombre or liner.
-          Lasts 4 years plus with minimal fading. One month touch up included in
-          price.
-          <span class="pink-and-bold">
-            Color will be advised by professional during consultation.
-          </span>
-        </p>
-        <a href="#" class="pink-button"
-          >Book my <span class="all-caps">free</span> consultation</a
-        >
-      </section>
-
-      <section>
-        <h3>Microshaded Eyebrows</h3>
-        <p>
-          Customized to fit your natural facial features. This look is permanent
-          and looks similar to makeup. Lasts 4 years plus with minimal fading.
-          One month touch up included in price.
-          <span class="pink-and-bold">
-            Color will be advised by professional during consultation.
-          </span>
-        </p>
-        <a href="#" class="pink-button"
-          >Book my <span class="all-caps">free</span> consultation</a
-        >
-      </section>
+        <section class="card">
+          <h3>Microshaded Eyebrows</h3>
+          <p>
+            Customized to fit your natural facial features. This look is
+            permanent and looks similar to makeup. Lasts 4 years plus with
+            minimal fading. One month touch up included in price.
+            <span class="pink-and-bold">
+              Color will be advised by professional during consultation.
+            </span>
+          </p>
+          <a href="#" class="pink-button"
+            >Book my <span class="all-caps">free</span> consultation</a
+          >
+        </section>
+      </div>
     </main>
     <footer></footer>
   </body>
