--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <span>Black Friday Deal</span>
         </p>
       </section>
+
       <div class="cards">
         <section class="card">
           <h3>Eyeliner</h3>
@@ -93,6 +94,22 @@
           >
         </section>
       </div>
+
+      <section class="reviews">
+        <h2>Reviews</h2>
+
+        <section class="review">
+          <p class="rating">
+            ***** <span class="sr-only">Five out of five stars.</span>
+            <span class="review-notes">Top Reviewer</span>
+          </p>
+          <p>
+            <span class="review-name">Andrea</span>
+            <span class="review-date">October 24</span>
+            <span>Ann is very professional and does amazing work!</span>
+          </p>
+        </section>
+      </section>
     </main>
     <footer></footer>
   </body>
