Stub 2nd and 3rd reviews

--- a/index.html
+++ b/index.html
@@ -99,13 +99,36 @@
         <h2>Reviews</h2>
 
         <section class="review">
-          <p class="rating">
+          <h3 class="rating">
             ***** <span class="sr-only">Five out of five stars.</span>
             <span class="review-notes">Top Reviewer</span>
-          </p>
+          </h3>
           <p>
             <span class="review-name">Andrea</span>
-            <span class="review-date">October 24</span>
+            <span class="review-date">October 24, 2020</span>
+            <span>Ann is very professional and does amazing work!</span>
+          </p>
+        </section>
+
+        <section class="review">
+          <h3 class="rating">
+            ***** <span class="sr-only">Five out of five stars.</span>
+            <span class="review-notes">Top Reviewer</span>
+          </h3>
+          <p>
+            <span class="review-name">Barbara</span>
+            <span class="review-date">October 6, 2020</span>
+            <span>Ann is very professional and does amazing work!</span>
+          </p>
+        </section>
+        <section class="review">
+          <h3 class="rating">
+            ***** <span class="sr-only">Five out of five stars.</span>
+            <span class="review-notes">Top Reviewer</span>
+          </h3>
+          <p>
+            <span class="review-name">Barbara</span>
+            <span class="review-date">October 6, 2020</span>
             <span>Ann is very professional and does amazing work!</span>
           </p>
         </section>
