Stub covid 19 precautions

--- a/index.html
+++ b/index.html
@@ -133,6 +133,56 @@
           </p>
         </section>
       </section>
+
+      <section>
+        <div class="full-width-bg">
+          <h2>COVID-19 Precautions</h2>
+        </div>
+        <ul>
+          <li>
+            <!-- Icon -->
+            <p>
+              <span class="pink-and-bold">No mask</span>
+              <span>no service</span>
+            </p>
+          </li>
+          <li>
+            <!-- Icon -->
+            <p>
+              <span class="pink-and-bold">Stay home</span>
+              <span>if unwell</span>
+            </p>
+          </li>
+          <li>
+            <!-- Icon -->
+            <p>
+              <span class="pink-and-bold">Must sign</span>
+              <span>COVID 19 consent form</span>
+            </p>
+          </li>
+          <li>
+            <!-- Icon -->
+            <p>
+              <span class="pink-and-bold">No extra</span>
+              <span>company</span>
+            </p>
+          </li>
+          <li>
+            <!-- Icon -->
+            <p>
+              <span class="pink-and-bold">Must wash</span>
+              <span>hands upon arrival</span>
+            </p>
+          </li>
+          <li>
+            <!-- Icon -->
+            <p>
+              <span class="pink-and-bold">Temperature</span>
+              <span>check</span>
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer></footer>
   </body>
