--- a/index.html
+++ b/index.html
@@ -183,6 +183,23 @@
           </li>
         </ul>
       </section>
+
+      <section class="hero">
+        <div class="hero-left">
+          <h2>
+            <span>Finance all your beauty needs!</span>
+          </h2>
+          <p>
+            <span class="all-caps">Click the button below</span>
+          </p>
+          <a href="#" class="white-button">Apply here</a>
+        </div>
+        <div class="hero-right">
+          <
+          <!-- <img src="" alt=""> Background image goes here. -->
+          <!-- <img src="" alt=""> Hand image goes here. -->
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
