--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
 
       <section class="reviews">
-        <h2>Reviews</h2>
+        <h2 class="pink-bg">Reviews</h2>
 
         <section class="review">
           <h3 class="rating">
@@ -104,8 +104,20 @@
             <span class="review-notes">Top Reviewer</span>
           </h3>
           <p>
-            <span class="review-name">Andrea</span>
-            <span class="review-date">October 24, 2020</span>
+            <span class="review-name pink-and-bold">Monica</span>
+            <span class="review-date pink">November 8, 2020</span>
+            <span>Amazing</span>
+          </p>
+        </section>
+
+        <section class="review">
+          <h3 class="rating">
+            ***** <span class="sr-only">Five out of five stars.</span>
+            <span class="review-notes">Top Reviewer</span>
+          </h3>
+          <p>
+            <span class="review-name pink-and-bold">Andrea</span>
+            <span class="review-date pink">October 24, 2020</span>
             <span>Ann is very professional and does amazing work!</span>
           </p>
         </section>
@@ -116,20 +128,13 @@
             <span class="review-notes">Top Reviewer</span>
           </h3>
           <p>
-            <span class="review-name">Barbara</span>
-            <span class="review-date">October 6, 2020</span>
-            <span>Ann is very professional and does amazing work!</span>
-          </p>
-        </section>
-        <section class="review">
-          <h3 class="rating">
-            ***** <span class="sr-only">Five out of five stars.</span>
-            <span class="review-notes">Top Reviewer</span>
-          </h3>
-          <p>
-            <span class="review-name">Barbara</span>
-            <span class="review-date">October 6, 2020</span>
-            <span>Ann is very professional and does amazing work!</span>
+            <span class="review-name pink-and-bold">Barbara</span>
+            <span class="review-date pink">October 6, 2020</span>
+            <span
+              >Very nice office, Ann was wonderful. Ever pleased with my eye
+              liner and will definitely go back for other services. Barbara
+              R.</span
+            >
           </p>
         </section>
       </section>
@@ -195,7 +200,6 @@
           <a href="#" class="white-button">Apply here</a>
         </div>
         <div class="hero-right">
-          <
           <!-- <img src="" alt=""> Background image goes here. -->
           <!-- <img src="" alt=""> Hand image goes here. -->
         </div>
