Draft map graphic

--- a/index.html
+++ b/index.html
@@ -204,6 +204,17 @@
           <!-- <img src="" alt=""> Hand image goes here. -->
         </div>
       </section>
+
+      <section>
+        <h2>Find us here</h2>
+        <div class="address">
+          <!-- <img src="" alt=""> Map marker goes here. -->
+          <address>
+            3300 Buckeye Rd Suite 210, Atlanta, GA 30341
+            <a href="#" class="white-button">Go to map</a>
+          </address>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
