--- a/index.html
+++ b/index.html
@@ -216,6 +216,55 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer id="footer">
+      <div class="footer-logos">
+        <!-- <img src="" alt=""> MOBA logo goes here. -->
+        <!-- <img src="" alt=""> BBB logo goes here. -->
+      </div>
+      <section class="footer-left">
+        <ul class="social-icons">
+          <li>
+            <a href="#">
+              <i class="fas fa-home" aria-hidden="true"></i>
+              <span class="sr-only"> Pinterest </span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-home" aria-hidden="true"></i>
+              <span class="sr-only"> Facebook </span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-home" aria-hidden="true"></i>
+              <span class="sr-only"> Instagram </span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-home" aria-hidden="true"></i>
+              <span class="sr-only"> Google </span>
+            </a>
+          </li>
+        </ul>
+        <h2>
+          Social Media Handles |
+          <a href="https://www.myownbeauty.net/">@MyOwnBeautyATL</a>
+        </h2>
+        <h2>
+          Email |
+          <a href="mailto:myownbeautyATL@gmail.com">MyOwnBeautyATL@gmail.com</a>
+        </h2>
+        <hr />
+        <address>
+          <a href="tel:+6787885530">(678) 788-5530</a>
+          <p>
+            <span> 3300 Buckeye Rd Ste 210</span>
+            <span> Atlanta, GA 30341 </span>
+          </p>
+        </address>
+      </section>
+    </footer>
   </body>
 </html>
