Add css for layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Black Friday Deal: My Own Beauty Aesthetics</title>
+
+    <style>
+      body {
+        margin: 0;
+        display: grid;
+        height: 100vh;
+        grid-template-rows: auto 1fr auto;
+      }
+
+      header {
+        background: lightpink;
+        /* padding: 2rem; */
+      }
+
+      main {
+        background: coral;
+      }
+
+      footer {
+        background: wheat;
+        /* padding: 2rem; */
+      }
+
+      .sr-only {
+        border: 0 !important;
+        clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
+        -webkit-clip-path: inset(50%) !important;
+        clip-path: inset(50%) !important; /* 2 */
+        height: 1px !important;
+        margin: -1px !important;
+        overflow: hidden !important;
+        padding: 0 !important;
+        position: absolute !important;
+        width: 1px !important;
+        white-space: nowrap !important; /* 3 */
+      }
+    </style>
   </head>
   <body>
     <header>
