--- a/index.html
+++ b/index.html
@@ -6,14 +6,98 @@
     <title>Black Friday Deal: My Own Beauty Aesthetics</title>
 
     <style>
-      /* Page layout */
-
-      html {
+      /* CSS Reset */
+      html,
+      body,
+      div,
+      span,
+      applet,
+      object,
+      iframe,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      p,
+      blockquote,
+      pre,
+      a,
+      abbr,
+      acronym,
+      address,
+      big,
+      cite,
+      code,
+      del,
+      dfn,
+      em,
+      img,
+      ins,
+      kbd,
+      q,
+      s,
+      samp,
+      small,
+      strike,
+      strong,
+      sub,
+      sup,
+      tt,
+      var,
+      b,
+      u,
+      i,
+      center,
+      dl,
+      dt,
+      dd,
+      ol,
+      ul,
+      li,
+      fieldset,
+      form,
+      label,
+      legend,
+      table,
+      caption,
+      tbody,
+      tfoot,
+      thead,
+      tr,
+      th,
+      td,
+      article,
+      aside,
+      canvas,
+      details,
+      embed,
+      figure,
+      figcaption,
+      footer,
+      header,
+      hgroup,
+      menu,
+      nav,
+      output,
+      ruby,
+      section,
+      summary,
+      time,
+      mark,
+      audio,
+      video {
+        margin: 0;
+        padding: 0;
+        border: 0;
         font-size: 18px;
+        vertical-align: baseline;
       }
 
+      /* Page layout */
+
       body {
-        margin: 0;
         height: 100vh;
 
         display: grid;
@@ -48,11 +132,7 @@
 
       /* Header/Carousel */
 
-      /* This looks weird because entire page is offset; add padding to a header/main/footer element to reproduce */
-
       .header-container {
-        padding: 0;
-        margin: 0;
         list-style-type: none;
 
         display: flex;
