Add back in some important css reset rules

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
         margin: 0;
         padding: 0;
         border: 0;
-        font-size: 18px;
+        font-size: 100%;
+        font: inherit;
         vertical-align: baseline;
       }
 
@@ -99,7 +100,6 @@
 
       body {
         height: 100vh;
-
         display: grid;
         grid-template-rows: auto 1fr auto;
       }
