--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 
       body {
         height: 100vh;
+        font-size: 1.125em;
         display: grid;
         grid-template-rows: auto 1fr auto;
       }
